--- a/app/assets/stylesheets/home/main/top.css
+++ b/app/assets/stylesheets/home/main/top.css
@@ -4,15 +4,12 @@
 
 .top-wrapper{
 	margin-top:-90px;
+
 	color:#fff;
-  background: -webkit-linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
-  background:    -moz-linear-gradient(90deg,#66CDAA 10%, #93F9B9 90%);
-  background:     -ms-linear-gradient(90deg,#66CDAA 10%, #93F9B9 90%);
-  background:      -o-linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
-  background:         linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
-  ;
+  background-image: url("/images/manclean.jpg");
+  background-size:cover;
   text-align:center;
-  padding:150px 0 130px
+  padding:50px 0 100px
 }
 
 
@@ -20,13 +17,13 @@
 
 	font-size:45px;
 	letter-spacing:5px;
-	padding-top:20px
+	padding-top:150px;
 	 
     margin-left:1%;
 }
 
 .top-wrapper p{
-  opacity:.9;
+ 
 	margin-bottom:35px
 }
 
@@ -75,7 +72,7 @@ font-size:14px
 }
 
 .explain-seekle-wrapper{
-   height:430px;
+   height:1000px;
   text-align:center;
   background-color:#fff;
   border-top:2px solid #f5f5f5;
@@ -98,15 +95,25 @@ width:73%;
 margin-top: 50px;
 }
 
+.seekle_favs_left p{
+clear:both;
+float:center;
+}
+
+
 
 .popular_service1{
+
 width:23.7%;
-height:180px;
+height:130px;
+
+margin-bottom: 12px;
 float:left;
 }
 .popular_service2{
 width:23.7%;
-height:180px;
+height:130px;
+margin-bottom: 12px;
 float:left;
 margin-left: 13px;
 }
@@ -126,6 +133,7 @@ margin-left: 13px;
 
 
 @media only screen and  ( max-width:414px ){
+
   .top-wrapper{
     padding: 50px 0 60px 0px;
   }
@@ -137,7 +145,7 @@ margin-left: 13px;
    font-size: 30px;
    line-height: 50px;
    padding-left: 0%;
-   	padding-top:12%;
+   	padding-top:16%;
   }
 
 
@@ -146,6 +154,8 @@ margin-left: 13px;
    margin-left: 14%;
    line-height: 10px;
    }
+
+
 
 
    .Seekle-heading{
@@ -172,7 +182,7 @@ margin-top: 30px;
     margin-bottom: 10px;
 }
 .explain-seekle-wrapper{
-   height:490px;
+   height:1500px;
   text-align:center;
   background-color:#fff;
   border-top:2px solid #f5f5f5;
