--- a/app/assets/stylesheets/home/registration/provider_registration.css
+++ b/app/assets/stylesheets/home/registration/provider_registration.css
@@ -42,7 +42,7 @@ border-radius:3%;
 }
 
 
-.field input{
+.field2 input{
     height:36px;
     width:273px;
 }
@@ -103,7 +103,7 @@ border-radius:3%;
 
 
 
-.field input{
+.field2 input{
     height:40px;
     width:323px;
 }
@@ -151,7 +151,7 @@ margin-top: 30px;
 }
 
 
-.field input{
+.field2 input{
     height:40px;
     width:365px;
 
