--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang="en">
 <head>
 
-	<title>Seekle（シークル）｜ 簡単比較で失敗しない業者選び！</title>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
+	<title>Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！</title>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
 <%= favicon_link_tag('favicon.ico') %>
-<meta name=”description” content=”ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各業者選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]”>
+<meta name=”description” content=”ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]”>
 
 </head>
 
@@ -19,7 +19,7 @@
 
 	<%= stylesheet_link_tag "application", media: "all" %>
 	<header>
-		<div class="container_head"> 
+		 
 			<a href="/"><%= image_tag('logo-min.png',class: 'logo') %></a> 
 			<ul class="header-right"> 
 				<% if user_signed_in? %> 
@@ -32,7 +32,7 @@
 				<li><%= link_to 'ログイン', new_user_session_path %></li>
 				<% end %> 
 			</ul>
-		</div>
+	
 	</header> 
 	<div class="main_content"> <%= yield %> </div>
 
