--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -149,20 +149,21 @@
 
 #scroll-menu .scroll-menu-inner {
 
-    width: 1000px;/*メニューの横幅*/
+     list-style-type: none;
+    width: 760px;/*メニューの横幅*/
     height: 100%;
-    margin-left: -30px;
+    margin-left: 10px;
+    padding: 0;
     text-align: center;
 }
-
 #scroll-menu li {
-  margin-top: -4px;
+    margin-top: -4px;
     float: left;
     font-size: 25px;
-    width: 13%;
+    width: 18%;
     height: 100%;
-        margin-left: 0px;
 }
+
 
 
 
@@ -193,18 +194,18 @@
     line-height: 40px;/*メニューの縦幅*/
 }
 #scroll-menu .scroll-menu-inner {
-
-    width: 980px;/*メニューの横幅*/
+    list-style-type: none;
+    width: 760px;/*メニューの横幅*/
     height: 100%;
-    margin-left: -30px;
+    margin-left: 10px;
+    padding: 0;
     text-align: center;
 }
 #scroll-menu li {
-    float: left;
+  float: left;
     font-size: 26px;
-    width: 14%;
+    width: 20%;
     height: 100%;
-        margin-left: 0px;
 }
 
 
@@ -234,16 +235,16 @@
 
 #scroll-menu .scroll-menu-inner {
     list-style-type: none;
-    width: 1000px;/*メニューの横幅*/
+    width: 760px;/*メニューの横幅*/
     height: 100%;
-    margin-left: 6px;
+    margin-left: 10px;
     padding: 0;
     text-align: center;
 }
 #scroll-menu li {
     float: left;
     font-size: 26px;
-    width: 15%;
+    width: 20%;
     height: 100%;
 }
 
