--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -90,11 +90,11 @@
 
    <div class="company_service_mission">
     <h2>始まったばかりのサービスを一緒に伸ばしていくメンバーを募集！</h2>
-    <p>会社にいるのは現在代表の私だけです。ご興味がある方はseekle.info@gmail.comまでご連絡お願いします
+    <p>会社にいるのは現在代表の私だけです。ご興味がある方は
+<%= mail_to 'seekle.info@gmail.com', 'こちらのアドレス',  :subject => '【Seekleメンバー募集】へのお問い合わせ' %>までご連絡お願いします
    </p>
  </div>
 </div>
-
 
 
 
