--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -202,7 +202,7 @@
   <div class="message-wrapper">
 
       <div class="heading">
-        <h2>あなたもサービス提供者として参加しませんか？</h2>
+        <h2>サービス提供者として参加しませんか？</h2>
         <h3 id="tagline">Let's find customers who need you!</h3>
       </div>
       <div class="join-button">
