--- a/app/views/layouts/top_home.html
+++ b/app/views/layouts/top_home.html
@@ -54,7 +54,7 @@
 									<li>
 										<a href="/providers/sign_in">管理画面ログイン</a>
 									</li>
-									<li><a href="/providers/sign_up">サービス提供者登録</a></li> 
+									<li><a href="/home/pro">サービス提供者として参加</a></li> 
 					          	</ul>
 					</div>
 
