--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -1,4 +1,5 @@
 
+<%= render 'home/header/dashboardhead' %>
 
  <div class="pro-top-wrapper">
 
@@ -25,7 +26,7 @@
 </div>
 
 
-<div class="about-seekle-wrapper">
+<div class="about-provider-wrapper">
 
  <div class="reasons">
    <div class="icons">
@@ -38,7 +39,11 @@
    <div class="icons"><i class="fa fa-user fa-5x"></i> </div>
    <h2>登録費、掲載費無料！</h2>
 
-   <p>お客さんとの契約が成立してから手数料の15%をいただきます。それまでの登録料、掲載費は全て無料！
+
+
+   <p>初期費用・月額費用・掲載料は、すべて0円。予約確定ではじめて予約手数料が発生します。
+今なら予約手数料も初回2回まで完全無料です。
+
    </p>
 
  </div>
