--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -76,9 +76,9 @@
 
 </table></div>
 
-  <div class="actions">
-     <%= f.submit '保存する', :class => 'provider_join_btn', data:{ disable_with: "保存中・・・"} %>
-  </div>
+
+     <%= f.submit '保存する', :class => 'btn btn-default', data:{ disable_with: "保存中・・・"} %>
+
 <% end %>
 
 
