--- a/app/views/providers/registrations/edit.html.erb
+++ b/app/views/providers/registrations/edit.html.erb
@@ -19,44 +19,44 @@
   </td>
 </tr>
 
- <tr>
-   <th> <p>住所<span class="form-label required">必須</span></p></th>
-   <td>
-    <%= f.text_field :address, class: 'form-control',placeholder:"〒123-4567 
-〇〇県 〇〇市 1-2-3" %>
-  </td>
-</tr>
+
 
    <%= f.fields_for :store_infos do |s| %>
+
 
   
 <tr>
  <th> <p>店舗概要<span class="form-label required">必須</span> </p></th>
  <td>
-  <%= s.text_area :about, class: 'content-area',placeholder:"お店の特徴、提供サービスへの思い、オススメポイントなどを紹介しましょう" %>
+  <%= s.text_area :about, class: 'content-area',placeholder:"お店の特徴、ご自身の経歴・資格、提供サービスへの思いなどを詳しく紹介しましょう(^ ^)" %>
 </td>
 </tr>
 
    <tr>
    <th> <p>営業時間<span class="form-label required">必須</span></p></th>
    <td>
+     <div class="col-xs-5">
     <%= s.text_field :hours, class: 'form-control',placeholder:"8時～15時受付まで対応可" %>
+    </div>
   </td>
 </tr>
 
  <tr>
    <th> <p>定休日<span class="form-label required">必須</span></p></th>
    <td>
+       <div class="col-xs-5">
     <%= s.text_field :holiday, class: 'form-control',placeholder:"不定休" %>
   </td>
+  </div>
 </tr>
 
- 
-
+　
   <tr>
    <th> <p>お支払い方法<span class="form-label required">必須</span></p></th>
    <td>
+          <div class="col-xs-5">
     <%= s.text_field :payment, class: 'form-control',placeholder:"現金・クレジットカード" %>
+    </div>
   </td>
 </tr>
 
@@ -67,7 +67,9 @@
   <tr>
    <th> <p>電話番号<span class="form-label required">必須</span></p></th>
    <td>
+          <div class="col-xs-5">
     <%= a.text_field :phonenumber, class: 'form-control',placeholder:"1234-56-7890" %>
+    </div>
   </td>
 </tr>
 
@@ -76,10 +78,115 @@
 <tr>
  <th> <p>店舗写真<span class="form-label required">必須</span> </p></th>
  <td>
+        <div class="col-xs-7">
   <%= f.file_field :mainpic, class: "form-control image-field" %>
-  
+  </div>
 </td>
 </tr>
+
+<tr class="cell-join">
+<th class="address" rowspan="5">住所</th>
+
+     <td> <p>郵便番号<span class="form-label required">必須</span> </p>
+      <div class="col-xs-4">
+     <%= s.text_field :postalcode, class: 'form-control',placeholder:"123-4567"%>
+         </div>
+    </td>
+
+</tr>
+
+
+<tr class="cell-join">
+
+     <td> <p>都道府県<span class="form-label required">必須</span></p>
+      <div class="col-xs-4">
+   <select class="form-control" name="provider[store_infos_attributes][0][prefecture]" id="provider_store_infos_attributes_0_prefecture">
+<option value="" selected>都道府県</option>
+<option value="北海道">北海道</option>
+<option value="青森県">青森県</option>
+<option value="岩手県">岩手県</option>
+<option value="宮城県">宮城県</option>
+<option value="秋田県">秋田県</option>
+<option value="山形県">山形県</option>
+<option value="福島県">福島県</option>
+<option value="茨城県">茨城県</option>
+<option value="栃木県">栃木県</option>
+<option value="群馬県">群馬県</option>
+<option value="埼玉県">埼玉県</option>
+<option value="千葉県">千葉県</option>
+<option value="東京都">東京都</option>
+<option value="神奈川県">神奈川県</option>
+<option value="新潟県">新潟県</option>
+<option value="富山県">富山県</option>
+<option value="石川県">石川県</option>
+<option value="福井県">福井県</option>
+<option value="山梨県">山梨県</option>
+<option value="長野県">長野県</option>
+<option value="岐阜県">岐阜県</option>
+<option value="静岡県">静岡県</option>
+<option value="愛知県">愛知県</option>
+<option value="三重県">三重県</option>
+<option value="滋賀県">滋賀県</option>
+<option value="京都府">京都府</option>
+<option value="大阪府">大阪府</option>
+<option value="兵庫県">兵庫県</option>
+<option value="奈良県">奈良県</option>
+<option value="和歌山県">和歌山県</option>
+<option value="鳥取県">鳥取県</option>
+<option value="島根県">島根県</option>
+<option value="岡山県">岡山県</option>
+<option value="広島県">広島県</option>
+<option value="山口県">山口県</option>
+<option value="徳島県">徳島県</option>
+<option value="香川県">香川県</option>
+<option value="愛媛県">愛媛県</option>
+<option value="高知県">高知県</option>
+<option value="福岡県">福岡県</option>
+<option value="佐賀県">佐賀県</option>
+<option value="長崎県">長崎県</option>
+<option value="熊本県">熊本県</option>
+<option value="大分県">大分県</option>
+<option value="宮崎県">宮崎県</option>
+<option value="鹿児島県">鹿児島県</option>
+<option value="沖縄県">沖縄県</option>
+</select>
+     </div>
+    </td>
+
+
+
+
+
+</tr>
+<tr class="cell-join">
+
+     <td> <p>市区町村<span class="form-label required">必須</span></p>
+  <div class="col-xs-6">
+     <%= s.text_field :city, class: 'form-control'%>
+     </div>
+    </td>
+</tr>
+<tr class="cell-join">
+  
+     <td><p> 町名・番地<span class="form-label required">必須</span></p>
+  <div class="col-xs-6">
+     <%= s.text_field :address, class: 'form-control'%>
+     </div>
+    </td>
+</tr>
+
+<tr class="cell-join">
+
+     <td> <p>ビル名・部屋番号<span class="form-label required">必須</span></p>
+  <div class="col-xs-6">
+     <%= s.text_field :building, class: 'form-control'%>
+     </div>
+    </td>
+</tr>
+
+
+
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
