--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -32,7 +32,7 @@
    <div class="icons">
     <i class="fa fa-clock-o fa-5x"></i></div>
     <h2>ホームページ作成不要！</h2>
-    <p>店舗のホームページ外注するか、作っても検索エンジンの上位に上がるのは大手の会社が多い。。Seekleでは頑張れば頑張るほど、あなたのサービスが目立つ広告塔となります！</p>
+    <p>店舗のホームページを外注するか、作っても検索エンジンの上位に上がるのは大手の会社が多い。。Seekleでは頑張れば頑張るほど、あなたのサービスが目立つ広告塔となります！</p>
   </div>
 
   <div class="reasons2">
