--- a/app/views/category/lesson.html.erb
+++ b/app/views/category/lesson.html.erb
@@ -1,4 +1,4 @@
-       <%= render 'category/header' %>
+     <%= render 'category/header' %>
      
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
@@ -7,7 +7,7 @@
    <div class="top_home_page">
 
     <h1>習い事</h1>
-     <h3>あなたの暮らしを変えるSeekleでの住まいサービス</h3>
+     <h3>Seekleであなたの趣味、特技をもっと深めよう</h3>
 
 
    </div>
