--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -1,4 +1,4 @@
-     <%= render 'category/header' %>
+       <%= render 'category/header' %>
 
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
@@ -6,7 +6,7 @@
 
 
     <h1>イベント</h1>
-     <h3>あなたの暮らしを変えるSeekleでの住まいサービス</h3>
+     <h3>一生の思い出になるイベントをもっと華やかに</h3>
    </div>
 
 
