--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -38,20 +38,18 @@
 
 		<footer class="footer"> 
 			<div class="footer-top"> 
-				<div class="row">
+					<div class="footer_content">
 					<div class="col-sm-3"> 
+				
 						<h3 class="widget-title">Customers</h3> 
-			
-								<ul>
 									<li><a href="/home/guide">ご利用ガイド</a></li> 
-								</ul> 
+	
 					</div> 
 
 					<div class="col-sm-3"> 
-						<h3 class="widget-title">Provider</h3> 
+							<ul> 
+								<h3 class="widget-title">Provider</h3> 
 
-							
-								<ul> 
 									<li>
 										<a href="/providers/sign_in">管理画面ログイン</a>
 									</li>
@@ -60,10 +58,8 @@
 					</div>
 
 					<div class="col-sm-3 "> 
-						<h3 class="widget-title">Company</h3> 
-						
-							
-								<ul>
+						      <ul>
+									<h3 class="widget-title">Company</h3> 
 									<li><a href="/company/index">運営会社</a></li> 
 								</ul> 
 						
@@ -86,11 +82,11 @@
 			</footer>
 			<div class="footer-bottom"> 
 	
-						<nav class="widget-menu"> <ul>
+						<nav class="widget-menu"> 
 							<li><a href="/home/term">利用規約</a></li>
 							<li><a href="/home/policy">プライバシポリシー</a></li> 
 							<li><a href="/home/signage">特定商取引に基づく表記</a></li> 
-						</ul> 
+				
 					</nav> 
 		
 		
