--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -13,11 +13,19 @@
     height:67px;
 }
 
-.logo a,a,a:hover,header{text-decoration:none}html{overflow:auto}body{overflow:hidden;position:relative;margin:0}li,ul{list-style-type:none;margin:0}a{color:gray}a:hover{color:#1b7ccd}.main_content{padding-top:57px;margin:0 auto}
+.logo a,a,a:hover,header{text-decoration:none}
+html{overflow:auto}body{overflow:hidden;position:relative;margin:0}li,ul{list-style-type:none;margin:0}a{color:gray}a:hover{color:#1b7ccd}.main_content{padding-top:57px;margin:0 auto}
 
 h1{font-size:32px;letter-spacing:-2px;margin-bottom:0px;}
 
-.logo a,h2{letter-spacing:-1px}h2{font-size:20px}p{font-size:16px;line-height:40px}
+
+  h2{
+    font-size:20px
+    }
+p{
+  font-size:16px;
+  line-height:40px
+}
 
 header{
   width:100%;
@@ -28,23 +36,51 @@ header{
 
   .logo{
     height:67px;
-    width:15%;
+  
     margin-left: 169px;
   }
-.logo a{float:left;font-size:30px;padding:12px 50px;font-weight:700}
-.logo a:hover {
 
+.logo a{
+  float:left;
+  font-size:30px;
+  padding:12px 50px;
+  font-weight:700;
+}
+
+.logo a:hover {
   text-decoration:none;
 }
 
+.logo_2 a,h2{
+  letter-spacing:-1px;
+}
 
+.logo_2{
+ 
+    max-width: 100%; 
+ height:67px;
 
-.logo_2 a,h2{letter-spacing:-1px}
-.logo_2{height:70px;width:16%; margin-left: 120px;}
-.logo_2 a{float:left;font-size:30px;padding:12px 50px;font-weight:700}
+    margin-left: 169px;
+ }
+.logo_2 a{
+  float:left;
+  font-size:30px;
+  padding:12px 50px;
+  font-weight:700
+}
 
-.provider-header{text-decoration:none}
-.provider-header{height:69.6px;width:100%; background-color:#6495ED; position:absolute;top:0;z-index:10;padding:1px;cursor:pointer}
+.provider-header{
+  text-decoration:none
+}
+.provider-header{
+  height:69.6px;
+  width:100%; 
+  background-color:#6495ED; 
+  position:absolute;
+  top:0;z-index:10;
+  padding:1px;
+  cursor:pointer
+}
 
 
 
@@ -59,7 +95,7 @@ header{
   }
 
   .logo{
-    width:34%;
+   
     height:56px;
   }
 }
