--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -19,8 +19,10 @@
 
 	<%= stylesheet_link_tag "application", media: "all" %>
 	<header>
+
+	 <%= link_to image_tag('logo-min.png',class: 'logo'), "/" %>
 		 
-			<a href="/"><%= image_tag('logo-min.png',class: 'logo') %></a> 
+
 			<ul class="header-right"> 
 				<% if user_signed_in? %> 
 				<li> <%= link_to 'ダッシュボード',users_path %></li> 
