--- a/app/views/company/index.html.erb
+++ b/app/views/company/index.html.erb
@@ -19,16 +19,22 @@
    <div class="company_service_mission">
     <h2>お客さま</h2>
     <p>価格・サービスの質・スタッフの対応を全て合わせてどのサービス、店舗がベストなのか。どこに頼めば失敗しないのか。を明確にし、満足のいくサービスを提供します。
-     一目で情報がわかるので、いろんなところへ電話して見積もる手間もなく、近くのサービスを簡単に依頼が可能になります。
+     一目で情報がわかるので、いろんなところへ電話して見積もる手間もなく、近くのサービスを簡単に依頼することが可能になります。<br>
+     <%= link_to  'アカウントを登録する',"/users/sign_up"%>
    </p>
  </div>
 
  <div class="company_service_mission">
   <h2>サービス提供者の方々</h2>
-  <p>独立した方、個人事業者の方をメインに主に集客、口コミ集めなど、Seekleを通してサポートを努め、ホームページを作る必要なく広告塔となり、ビジネスを始めやすい環境を創り、日本のビジネスインフラを整備していきます。</p>
+  <p>独立した方、個人事業者の方をメインに主に集客、口コミ集めなど、Seekleを通してサポートを努め、ホームページを作る必要なく広告塔となり、ビジネスを始めやすい環境を創り、日本のビジネスインフラを整備していきます。<br>
+サービスをSeekleに掲載していただける方は
+<%= link_to  'こちらのページ',"/home/pro"%>をご覧ください。
+</p>
   </div>
 
 </div>
+
+
 
 
 
@@ -67,6 +73,11 @@
       <td>オンラインサービスプラットフォームの開発と運営</td>
     </tr>
 
+      <tr>
+      <td>ご連絡</td>
+      <td>((<%= mail_to 'seekle.info@gmail.com', '株式会社Seekleに問い合わせする',  :subject => '【株式会社Seekle】へのお問い合わせ' %>))</td>
+    </tr>
+
      <tr>
       <td>代表者</td>
       <td>森川 恵美</td>
@@ -79,6 +90,7 @@
 
 
   </div>
+
 </div>
 
 
@@ -89,9 +101,10 @@
    </div>
 
    <div class="company_service_mission">
-    <h2>始まったばかりのサービスを一緒に伸ばしていくメンバーを募集！</h2>
-    <p>会社にいるのは現在代表の私だけです。ご興味がある方は
-<%= mail_to 'seekle.info@gmail.com', 'こちらのアドレス',  :subject => '【Seekleメンバー募集】へのお問い合わせ' %>までご連絡お願いします
+    <h2>メンバーを募集！</h2>
+    <p>会社にいるのは現在代表の森川だけです。
+    ご興味がある方は
+<%= mail_to 'seekle.info@gmail.com', 'こちらのアドレス',  :subject => '【Seekleメンバー募集】へのお問い合わせ' %>までご連絡お願いします。
    </p>
  </div>
 </div>
