--- a/app/views/reservations/list.html.erb
+++ b/app/views/reservations/list.html.erb
@@ -10,11 +10,14 @@
     </div>
   </div>
 </div>
+
 <%= render 'home/header/dashboardhead' %>
 
+
+<div class="main-container">
 <div class="reservation_history_wrapper">
 
-  <h1><%= current_user.name %>さんの予約中サービス </h1>
+  <h1><%= current_user.name %>さんの予約サービス履歴 </h1>
 
  
 <div class="customer_reservations_wrapper">
@@ -49,6 +52,6 @@
 
  </div>
 </div>
-
+</div>
 
 </div>
